# OmniMessage-Gateway

./: .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  gateway.py  omni_messages.db  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
gateway/: __init__.py  analytics.py  api.py  cli.py  config.py  contact_manager.py  core.py  deduplication.py  health_monitor.py  models.py  priority_queue.py  rate_limiter.py  router.py  scheduler.py  store.py  templates.py  webhook_security.py
gateway/channels/: __init__.py  discord.py  email.py  slack.py  telegram.py  webhook.py  whatsapp.py
tests/: conftest.py  test_analytics.py  test_api.py  test_channels.py  test_cli.py  test_config.py  test_contact_manager.py  test_core.py  test_deduplication.py  test_health_monitor.py  test_models.py  test_priority_queue.py  test_rate_limiter.py  test_router.py  test_scheduler.py  test_store.py  test_templates.py  test_webhook_security.py
