[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omnimessage-gateway"
version = "2.0.0"
description = "Unified multi-channel messaging gateway - One API, All Platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "platoba"}]
keywords = ["messaging", "gateway", "telegram", "whatsapp", "discord", "slack", "email", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Email",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/platoba/OmniMessage-Gateway"
Repository = "https://github.com/platoba/OmniMessage-Gateway"
Issues = "https://github.com/platoba/OmniMessage-Gateway/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
